chore(gender notebook): Update download button to use new version (same across all new notebooks). Format notebooks

--- a/notebooks/solutionsNB/DiscoverSolutions.qmd
+++ b/notebooks/solutionsNB/DiscoverSolutions.qmd
@@ -1,6 +1,6 @@
 ---
 pagetitle: "DiscoverSolutions"
-nb-authors: 
+nb-authors:
   - Todd Rosenstock
   - Zach Bogart
   - Brayden Youngberg
@@ -8,8 +8,7 @@ execute:
   echo: false
 ---
 
-# `{ojs} nbTitle` {class='title' #notebook-title} 
-
+# `{ojs} nbTitle` {class='title' #notebook-title}
 
 ```{ojs}
 viewof prettyLanguageView = {
@@ -21,7 +20,6 @@ viewof prettyLanguageView = {
     viewof language
   );
 }
-
 ```
 
 # `{ojs} Overview` {#overview}
@@ -517,7 +515,6 @@ ${insightCropOverview} ${insightCropPositive}
 ${insightDiffFirst} ${insightDiffSecond}`;
 }
 ```
-
 
 ## `{ojs} crop_diff_aez` {#cropDiffAEZ}
 
@@ -1086,7 +1083,6 @@ viewof selectPractice = {
 }
 ```
 
-
 ```{ojs}
 //| echo: true
 //| code-fold: true
@@ -1618,15 +1614,14 @@ viewof selectResourcePractice = {
 html`${csaResourceHtml}`
 ```
 
-
 # `{ojs} Methods` {#methods}
 
 `{ojs} _lang(nbText.methodsSources.intro)`
 
 ## `{ojs} data_sources`
 
-```{ojs}  
-md`${_lang(nbText.methodsSources.h2DataSourcesSubsection)}`
+```{ojs}
+md`${_lang(nbText.methodsSources.h2DataSourcesSubsection)}`;
 ```
 
 ## `{ojs} methods`
@@ -1635,9 +1630,8 @@ md`${_lang(nbText.methodsSources.h2DataSourcesSubsection)}`
 md`
 ### ${_lang(nbText.methodsSources.h3Era)}
 ${_lang(nbText.methodsSources.h3EraSubsection)}
-`
+`;
 ```
-
 
 ```{ojs}
 // This section needs to be above the .hidden for it to work
@@ -1654,45 +1648,42 @@ htl.html`
   <div class='floating-toc'>
     ${toc_bottom}
   </div>`
-
 ```
 
-# Source code {#source-code .hidden} 
+# Source code {#source-code .hidden}
 
 ## Text translations and language support
 
 ```{ojs}
-nbTitle = _lang({en: "Discover Solutions", fr: "Découvrir des solutions"})
+nbTitle = _lang({ en: "Discover Solutions", fr: "Découvrir des solutions" });
 // h1
-Overview = _lang(nbText.overview.h1)
+Overview = _lang(nbText.overview.h1);
 
-Interventions = _lang(nbText.interventions.h1)
+Interventions = _lang(nbText.interventions.h1);
 
-PracticalImpact = _lang(nbText.practicalImpact.meanCropDiff.h1)
+PracticalImpact = _lang(nbText.practicalImpact.meanCropDiff.h1);
 
-Risks = _lang(nbText.risks.h1)
+Risks = _lang(nbText.risks.h1);
 
-Factors = _lang(nbText.adoptionFactors.h1)
+Factors = _lang(nbText.adoptionFactors.h1);
 
-Summary = _lang(nbText.summary.h1)
+Summary = _lang(nbText.summary.h1);
 
-Methods = _lang(nbText.methodsSources.h1)
+Methods = _lang(nbText.methodsSources.h1);
 
 // h2
-crop_diff = _lang(nbText.practicalImpact.meanCropDiff.h2.meanDiff)
+crop_diff = _lang(nbText.practicalImpact.meanCropDiff.h2.meanDiff);
 
-crop_diff_aez = _lang(nbText.practicalImpact.meanCropDiffAEZ.h2)
+crop_diff_aez = _lang(nbText.practicalImpact.meanCropDiffAEZ.h2);
 
-aez_dif = _lang(nbText.practicalImpact.meanCropDiffAEZ.h2)
+aez_dif = _lang(nbText.practicalImpact.meanCropDiffAEZ.h2);
 
-data_sources = _lang(nbText.methodsSources.h2DataSources)
+data_sources = _lang(nbText.methodsSources.h2DataSources);
 
-methods = _lang(nbText.methodsSources.h2Methods)
+methods = _lang(nbText.methodsSources.h2Methods);
 
-quickInsight =_lang(nbText.supportNbText.labels.quickInsights)
-
+quickInsight = _lang(nbText.supportNbText.labels.quickInsights);
 ```
-
 
 ```{ojs}
 import {nbText} from "/data/DiscoverSolutions/nbText.ojs"
@@ -1970,18 +1961,18 @@ formatNumCompactLong = function (number, { locale = "en-US" } = {}) {
   return new Intl.NumberFormat(locale, {
     notation: "compact",
     compactDisplay: "long",
-    unitDisplay: "long"
+    unitDisplay: "long",
   }).format(number);
-}
+};
 
 formatNumStandard = function (number, { locale = "en-US" } = {}) {
   return new Intl.NumberFormat(locale, {}).format(number);
-}
+};
 
 // format number, 2 decimal places
-formatNum = d3.format(".2f")
+formatNum = d3.format(".2f");
 
-formatComma = d3.format(',')
+formatComma = d3.format(",");
 ```
 
 ## import data helpers
@@ -1992,13 +1983,13 @@ parseBool = (d) => {
   if (d === "TRUE") return true;
   if (d === "FALSE") return false;
   else return null;
-}
+};
 
 // Parsing numbers, blank strings as NaN's
 parseNum = (d) => {
   if (typeof d === "number" && !isNaN(d)) return d;
   return d.trim() === "" ? NaN : +d;
-}
+};
 ```
 
 ## Style things
@@ -2043,7 +2034,7 @@ aezColor_new = {
 ## Sections
 
 ### shared data
-  
+
 ```{ojs}
 // read excel sheet
 workbook_meanDifference = FileAttachment("/data/DiscoverSolutions/Mean_yield_difference.xlsx").xlsx()
@@ -2134,7 +2125,6 @@ csaResourceHtml = {
     ""
   )}</ul>`;
 }
-
 ```
 
 ### Practice/Crop dot plot
@@ -2193,10 +2183,10 @@ meanDiffCropList = [
   'Pigeon Pea',
   'Sesame Seed',
 ]
-
 ```
 
 ### AEZ Dot Plot
+
 ```{ojs}
 data_meanDiff_aezPracticeCrop_new = {
   const raw = await FileAttachment("/data/DiscoverSolutions/Mean_yield_difference@1.csv").csv({typed: true})
@@ -2214,11 +2204,13 @@ data_meanDiff_aezPracticeCrop_new = {
 ```
 
 ### Risk
+
 ```{ojs}
-data_lclRisk = data_extendedTable2.filter((d) => d.outcome == "LCL Risk")
+data_lclRisk = data_extendedTable2.filter((d) => d.outcome == "LCL Risk");
 ```
 
 ### Adoption Factors
+
 ```{ojs}
 adoptionFactorAllLabel = "All practices"
 
@@ -2351,12 +2343,10 @@ function markBoldSidebarText(data, {textFormat=(d) => d + ' obs.', ...options } 
     )
   );
 }
-
 ```
 
 ## Imports
 
 ```{ojs}
-import {T} from "@pbeshai/tidyjs"
+import { T } from "@pbeshai/tidyjs";
 ```
-
