fix(Inputs - multiSelect): Add additional CSS so it can overwrite default atlas styling, removing need for additional stylesheet. Also, move multi-select input to its own file.

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: "Atlas Notebook Template"
+pagetitle: "Econimic Returns on Investment"
 nb-authors:
   - Brayden Youngberg
   - Pete Stewart
@@ -7,11 +7,10 @@ date-created: "2025-10-15"
 date-edited: today
 execute:
   echo: false
-format:
-  html:
-    # code-fold: true
-    # code-summary: "Show the code" ## Add this to global template to make debugging easier.
-    css: roi_styles.css # Custom CSS for this notebook so the multi select works.
+# format:
+#   html:
+#     code-fold: true
+#     code-summary: "Show the code" ## Add this to global template to make debugging easier.
 ---
 
 ```{ojs}
@@ -743,7 +742,7 @@ viewof pickMetricWalkthrough = {
 ## Elements
 
 ```{ojs}
-import { dropdownInput, dropdownCSS } from "/helpers/uiComponents.ojs";
+import { dropdownInput, dropdownCSS } from "/helpers/multiSelect.ojs";
 
 dropdownCSS;
 ```
