docs(CIS Notebook): Add in example of multi-select and of table/figure toggle feature

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -18,6 +18,98 @@ hero_url = "./../../images/default_crop.webp";
 atlasHero(nbTitle, hero_url);
 ```
 
+# Examples
+
+## Multi Select
+
+```{ojs}
+import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
+
+dropdownCSS  // This needs called so that the CSS is loaded for the multi-select.
+
+viewof selectCropTest = multiSelect({
+   inputLabel: "Crops",
+   inputId: "cropsTest",
+   placeholderText: 'Select Crops...',
+   options: [{value:'RIC', label:'Rice'},
+             {value:'MAI', label: 'Maize'},
+             {value:'PEA', label: 'Pea'}],
+   selected: ['RIC','MAI','PEA']
+});
+
+selectCropTest
+```
+
+## Plot/Table Toggle
+
+```{ojs}
+createTable = (data) => {
+  let table = Inputs.table(data, {
+    height: 400,
+    rows: 25,
+    maxWidth: "1000px",
+  });
+  const style = document.createElement("style");
+  style.innerHTML = `
+    .exploreTable th {
+      background-color: lightgrey !important;
+    }
+    .exploreTable tr:nth-child(odd) {
+      background: #f2f2f2!important;
+    }
+    .exploreTable td {
+      padding-left: 15px !important;
+    }
+  `;
+  table.classList.add("exploreTable");
+  table.appendChild(style);
+
+  const checkboxes = table.querySelectorAll('table input[type="checkbox"]');
+
+  // Remove all checkboxes
+  checkboxes.forEach(function (checkbox) {
+    checkbox.parentNode.removeChild(checkbox);
+  });
+
+  return table;
+};
+```
+
+```{ojs}
+createPlot = (data) => {
+  return Plot.plot({
+    height: 400,
+    x: { label: "Crop" },
+    y: { label: "Yield (tons/ha)" },
+    marks: [Plot.barY(data, { x: "crop", y: "yield" })],
+  });
+};
+```
+
+```{ojs}
+viewof vizType = Inputs.radio(["Table", "Plot"], {
+  label: "Visualization Type",
+  value: "Table",
+});
+
+data = new Object([
+  { crop: "Wheat", yield: 3.2 },
+  { crop: "Maize", yield: 4.1 },
+  { crop: "Rice", yield: 5.0 },
+  { crop: "Soybean", yield: 2.8 },
+  { crop: "Barley", yield: 3.0 },
+  { crop: "Cassava", yield: 7.5 },
+]);
+
+{
+  if (vizType === "Plot") {
+    return createPlot(data);
+  } else {
+    return createTable(data);
+  }
+}
+```
+
 ## `{ojs} keyInsights` {class='key-insights' #key-insight-text}
 
 # `{ojs} heading1` {#example-heading1}
@@ -96,7 +188,7 @@ keyInsights = {
         en: `This is where some key insights should go, they will be dynamic based on the selections such as country (**:::country:::**) and crop type (**:::cropType:::**)`,
         fr: `Ceci est là où les résumés clés devraient être, ils seront dynamiques en fonction des sélections comme pays (**:::country:::**) et type de culture (**:::cropType:::**)`
   })
-  
+
   let fill_items = [
       { name: "country", value: hoverCountry },
       { name: "cropType", value: _lang({en: 'potatoes', fr: 'pomme de terre'}) }
@@ -148,7 +240,7 @@ function NavbarLangSelector(language_obj, masterLanguage) {
         viewof masterLanguage
       );
       lang_sel.id = "nav-lang-selector";
-      
+
       // Hack the css together for the observable inputs
       lang_sel.style.display = "flex";
       lang_sel.style.alignItems = "center";
@@ -255,4 +347,3 @@ htl.html`
     }
   });
 </script> -->
-
