--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -1,31 +1,31 @@
 ---
-pagetitle: "Atlas Notebook Template"
-nb-authors: 
+pagetitle: "Formulate A Climate Rational"
+nb-authors:
   - Brayden Youngberg
   - Pete Stewart
-date-created: '2025-02-19'
+date-created: "2025-02-19"
 date-edited: today
 ---
 
 ```{ojs}
-import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs"
+import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs";
 
-hero_url = "./../../images/default_crop.webp" 
+hero_url = "./../../images/default_crop.webp";
 // This ^^ must be relative path due to an issue
 // with how Quarto resolves certain paths if local image.
 // It can also be a url.
 
-atlasHero(nbTitle, hero_url)
+atlasHero(nbTitle, hero_url);
 ```
 
-
 ## `{ojs} keyInsights` {class='key-insights' #key-insight-text}
+
 # `{ojs} heading1` {#example-heading1}
 
-{{< include _template_plot.qmd >}} 
+{{< include _template_plot.qmd >}}
 
-<!-- The above ^  {{< include path.qmd >}} alows for modular import of code. 
-This is performed on build, so there are no performance implications, 
+<!-- The above ^  {{< include path.qmd >}} alows for modular import of code.
+This is performed on build, so there are no performance implications,
 but be aware of that the global namespaces are shared, so the same variable
 or module imported in each will result in an error -->
 
@@ -49,45 +49,46 @@ or module imported in each will result in an error -->
 
 # `{ojs} appendix` {#appendix}
 
-
 ```{ojs}
-
 toc_bottom = atlasTOC({
-  skip: ['notebook-title', 'appendix', 'source-code'], // These should be the section headings in the {# headings} 
-  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`
-})
+  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
+  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
+});
 
 htl.html`
       <div class='floating-toc'>
       ${toc_bottom}
       </div>
-      `
+      `;
 ```
 
-# Source code {#source-code .hidden} 
-<!-- 
+# Source code {#source-code .hidden}
+
+<!--
 NOTE:Everything below this point will not appear in the notebook.
 This is useful to hide all of the code, master selectors (language, admin level, etc.),
 and other things that are needed for the notebook to run but would be messy if
 actually appearing in the notebook.
 -->
 
-
 <!-- Text and Language Translations -->
+
 ```{ojs}
 // This cell is to contain all the headings and the notebook title
-nbTitle = _lang({en: "This is a template to build Atlas notebooks", fr: "Ceci est un modèle pour construire des notebooks Atlas"})
+nbTitle = _lang({
+  en: "This is a template to build Atlas notebooks",
+  fr: "Ceci est un modèle pour construire des notebooks Atlas",
+});
 // key_insights = _lang({en: "Key Insights", fr: "Résumé"})
-heading1 = _lang({en: "Heading 1", fr: "Titre 1"})
-heading2 = _lang({en: "Heading 2", fr: "Titre 2"})
-heading3 = _lang({en: "Heading 3", fr: "Titre 3"})
-heading4 = _lang({en: "Heading 4", fr: "Titre 4"})
-nbSummary = _lang({en: "Summary", fr: "Résumé"})
-appendix = _lang(general_translations.appendix)
+heading1 = _lang({ en: "Heading 1", fr: "Titre 1" });
+heading2 = _lang({ en: "Heading 2", fr: "Titre 2" });
+heading3 = _lang({ en: "Heading 3", fr: "Titre 3" });
+heading4 = _lang({ en: "Heading 4", fr: "Titre 4" });
+nbSummary = _lang({ en: "Summary", fr: "Résumé" });
+appendix = _lang(general_translations.appendix);
 ```
 
 ```{ojs}
-
 mutable hoverCountry = "SSA" // This mutable is defined here and updated in _template_plot.qmd. It should only be defined once.
 
 keyInsights = {
@@ -103,10 +104,7 @@ keyInsights = {
   let keyText =  md`${Lang.reduceReplaceTemplateItems(template, fill_items)}`
   return keyText
 }
-
 ```
-
-
 
 ```{ojs}
 import { lang as Lang } from "/helpers/lang.js"
@@ -134,7 +132,6 @@ viewof masterLanguage = Inputs.radio(languages, {
   value: languages.find((x) => x.key === defaultLangKey),
 })
 ```
-
 
 ```{ojs}
 // import { NavbarLangSelector } from "/helpers/uiComponents.ojs"
@@ -169,7 +166,6 @@ function NavbarLangSelector(language_obj, masterLanguage) {
 NavbarLangSelector(languages, masterLanguage)
 ```
 
-
 ```{ojs}
 prettyLanguageView = {
   return Inputs.bind(
@@ -182,11 +178,9 @@ prettyLanguageView = {
 }
 ```
 
+<!--
 
-
-<!-- 
-
-# Prototypes for future use to hack a sidebar into notebooks: 
+# Prototypes for future use to hack a sidebar into notebooks:
 
 {.column-margin}
 
@@ -214,12 +208,12 @@ htl.html`
   </div>`
 ```
 
-:-:: 
+:-::
 
 -->
 
 <!-- Floating Sidebar: Self-contained HTML, CSS, and JS -->
-<!-- 
+<!--
 <div id="floating-sidebar">
 
 </div>
@@ -261,3 +255,4 @@ htl.html`
     }
   });
 </script> -->
+
