feat(notebook text): Add basic text to the notebook
Add in the nbText.json and structure for it in the notebook. This does not include any of the dynamic insights or more complex text.

--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -10,40 +10,32 @@ date-edited: today
 ```{ojs}
 import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs";
 
-hero_url = "./../../images/default_crop.webp";
-// This ^^ must be relative path due to an issue
-// with how Quarto resolves certain paths if local image.
-// It can also be a url.
-
 atlasHero(nbTitle, hero_url);
 ```
 
-## `{ojs} keyInsights` {class='key-insights' #key-insight-text}
+# `{ojs} heading1` {#overview}
 
-# `{ojs} heading1` {#example-heading1}
+```{ojs}
+md`${_lang(nbText.sections.intro.text)}`; // wrapped in md for lists to work
+```
 
-{{< include _template_plot.qmd >}}
+# `{ojs} heading2` {#keyFacts}
 
-<!-- The above ^  {{< include path.qmd >}} alows for modular import of code.
-This is performed on build, so there are no performance implications,
-but be aware of that the global namespaces are shared, so the same variable
-or module imported in each will result in an error -->
+`{ojs} _lang(nbText.sections.keyFacts.introText)`
 
-{{< lipsum 2 >}}
+# `{ojs} heading3` {#recentChanges}
 
-# `{ojs} heading2` {#example-heading2}
+`{ojs} _lang(nbText.sections.recentChanges.introText)`
 
-{{< lipsum 2 >}}
+# `{ojs} heading4` {#futureProjections}
 
-# `{ojs} heading3` {#example-heading3}
+`{ojs} _lang(nbText.sections.futureProjections.introText)`
 
-{{< lipsum 1 >}}
+# `{ojs} heading5` {#hazardExposure}
 
-# `{ojs} heading4` {#example-heading4}
+`{ojs} _lang(nbText.sections.hazardExposure.introText)`
 
-{{< lipsum 1 >}}
-
-# `{ojs} nbSummary` {#summary}
+# `{ojs} summary` {#summary}
 
 {{< lipsum 1 >}}
 
@@ -56,60 +48,40 @@ toc_bottom = atlasTOC({
 });
 
 htl.html`
-      <div class='floating-toc'>
-      ${toc_bottom}
-      </div>
-      `;
+  <div class='floating-toc'>
+    ${toc_bottom}
+  </div>
+`;
 ```
 
 # Source code {#source-code .hidden}
 
-<!--
-NOTE:Everything below this point will not appear in the notebook.
-This is useful to hide all of the code, master selectors (language, admin level, etc.),
-and other things that are needed for the notebook to run but would be messy if
-actually appearing in the notebook.
--->
-
-<!-- Text and Language Translations -->
+## Text and Language Translations
 
 ```{ojs}
 // This cell is to contain all the headings and the notebook title
 nbTitle = _lang({
-  en: "This is a template to build Atlas notebooks",
-  fr: "Ceci est un modèle pour construire des notebooks Atlas",
+  en: "Formulate A Cliamte Rational",
+  fr: "Formuler une justification climatique",
 });
-// key_insights = _lang({en: "Key Insights", fr: "Résumé"})
-heading1 = _lang({ en: "Heading 1", fr: "Titre 1" });
-heading2 = _lang({ en: "Heading 2", fr: "Titre 2" });
-heading3 = _lang({ en: "Heading 3", fr: "Titre 3" });
-heading4 = _lang({ en: "Heading 4", fr: "Titre 4" });
-nbSummary = _lang({ en: "Summary", fr: "Résumé" });
+
+heading1 = _lang(general_translations.overview);
+heading2 = _lang(nbText.sections.keyFacts.title);
+heading3 = _lang(nbText.sections.recentChanges.title);
+heading4 = _lang(nbText.sections.futureProjections.title);
+heading5 = _lang(nbText.sections.hazardExposure.title);
+summary = _lang(general_translations.summary);
 appendix = _lang(general_translations.appendix);
 ```
 
 ```{ojs}
-mutable hoverCountry = "SSA" // This mutable is defined here and updated in _template_plot.qmd. It should only be defined once.
+import { lang as Lang } from "/helpers/lang.js";
 
-keyInsights = {
-  let template = _lang({
-        en: `This is where some key insights should go, they will be dynamic based on the selections such as country (**:::country:::**) and crop type (**:::cropType:::**)`,
-        fr: `Ceci est là où les résumés clés devraient être, ils seront dynamiques en fonction des sélections comme pays (**:::country:::**) et type de culture (**:::cropType:::**)`
-  })
-  
-  let fill_items = [
-      { name: "country", value: hoverCountry },
-      { name: "cropType", value: _lang({en: 'potatoes', fr: 'pomme de terre'}) }
-    ]
-  let keyText =  md`${Lang.reduceReplaceTemplateItems(template, fill_items)}`
-  return keyText
-}
-```
+nbText = await FileAttachment("/data/climateRationale/nbText.json").json();
 
-```{ojs}
-import { lang as Lang } from "/helpers/lang.js"
-
-general_translations = await FileAttachment("/data/shared/generalTranslations.json").json()
+general_translations = await FileAttachment(
+  "/data/shared/generalTranslations.json",
+).json();
 
 languages = [
   { key: "en", label: "English", locale: 'en-US' },
@@ -132,6 +104,82 @@ viewof masterLanguage = Inputs.radio(languages, {
   value: languages.find((x) => x.key === defaultLangKey),
 })
 ```
+
+## General
+
+### formatters
+
+```{ojs}
+// format number, short notation
+formatNumCompactShort = ({ locale = "en-US" } = {}) =>
+  new Intl.NumberFormat(locale, {
+    notation: "compact",
+    compactDisplay: "short",
+  }).format;
+
+// format number, to significant figures
+formatNumCompactSigFigs = ({ locale = "en-US", sigFigs = 3 } = {}) => {
+  // Return a formatting function
+  return (number) => {
+    // Adjust number to specified significant figures
+    const formattedNumber = Number(number).toLocaleString(locale, {
+      maximumSignificantDigits: sigFigs,
+      notation: "compact",
+      compactDisplay: "short",
+    });
+
+    return formattedNumber;
+  };
+};
+
+function formatUSD({ locale = "en-US" } = {}) {
+  const formatter = formatNumCompactShort({ locale });
+
+  return (number) => {
+    const formattedNum = formatter(number);
+    return "$" + formattedNum;
+  };
+}
+
+function formatIntDollar({ locale = "en-US" } = {}) {
+  return (number, unit = intDollarUnit.replace("$", "")) => {
+    let formattedNumber = formatUSD({ locale })(number);
+    let intDollar = unit + formattedNumber;
+    return intDollar;
+  };
+}
+```
+
+```{ojs}
+// template for observable input forms
+inputTemplate = ({ gap = "2em" } = {}) => {
+  // template for input display
+  return (inputs) =>
+    html`<div style="display: flex; gap: ${gap};">${inputs}</div>`;
+};
+
+// create where clause that handles null cases
+sqlWhereNull = ({ value, field } = {}) => {
+  return value === null ? `and ${field} is null` : `and ${field} = '${value}'`;
+};
+
+// alphabetic sort, nulls first
+sortByField = (a, b, { field } = {}) => {
+  const av = a[field];
+  const bv = b[field];
+
+  // nulls first
+  if (av === null || bv === null) {
+    if (av === bv) return 0;
+    return av === null ? -1 : 1;
+  }
+
+  // alphabetical compare
+  return av.localeCompare(bv);
+};
+```
+
+## Styling
 
 ```{ojs}
 // import { NavbarLangSelector } from "/helpers/uiComponents.ojs"
@@ -178,81 +226,10 @@ prettyLanguageView = {
 }
 ```
 
-<!--
+## Data
 
-# Prototypes for future use to hack a sidebar into notebooks:
+### Database
 
-{.column-margin}
+### Global Selectors
 
-```{ojs}
-htl.html`
-<style>
-.sticky-margin-div {
-  position: fixed;
-  }
-@media (max-width: 768px) {
-  .sticky-margin-div {
-    position: static;
-    }
-}
-</style>
-
-<div class = "sticky-margin-div">
-    <div>
-      ${Inputs.radio(languages, {
-        label: "Main language toggle",
-        format: (d) => d.key,
-        value: languages.find((x) => x.key === defaultLangKey),
-      })}
-    </div>
-  </div>`
-```
-
-:-::
-
--->
-
-<!-- Floating Sidebar: Self-contained HTML, CSS, and JS -->
-<!--
-<div id="floating-sidebar">
-
-</div>
-
-<style>
-  #floating-sidebar {
-    position: fixed;
-    top: 150px;           /* Distance from top of the page */
-    left: 20px;          /* Distance from left of the page */
-    width: 260px;        /* Sidebar width */
-    min-height: 400px;   /* Minimum height */
-    max-height: 80vh;    /* Max height relative to viewport */
-    background: #ffffff;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.12);
-    border-radius: 8px;
-    padding: 20px;
-    overflow-y: auto;
-    z-index: 9999;
-    transition: box-shadow 0.2s;
-  }
-  #floating-sidebar:hover {
-    box-shadow: 0 8px 24px rgba(0,0,0,0.18);
-  }
-  /* Responsive: hide on small screens */
-  @media (max-width: 800px) {
-    #floating-sidebar {
-      display: none;
-    }
-  }
-</style>
-
-<script>
-  // Optional: Add any JS for interactivity here
-  // Example: Toggle sidebar visibility with a keyboard shortcut (Ctrl+B)
-  document.addEventListener('keydown', function(e) {
-    if (e.ctrlKey && e.key === 'b') {
-      const sidebar = document.getElementById('floating-sidebar');
-      sidebar.style.display = (sidebar.style.display === 'none') ? 'block' : 'none';
-    }
-  });
-</script> -->
-
+## Content
