refactor(notebook text): Typo fix

--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -61,7 +61,7 @@ htl.html`
 ```{ojs}
 // This cell is to contain all the headings and the notebook title
 nbTitle = _lang({
-  en: "Formulate A Cliamte Rational",
+  en: "Formulate A Climate Rational",
   fr: "Formuler une justification climatique",
 });
 
